<resources>
    <string name="app_name">FoodHut</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="menu_logout">Log out</string>

    <string name="title_activity_admin_panel">Admin Panel</string>
    <string name="admin_customer">Customers</string>
    <string name="admin_product">Products</string>
    <string name="admin_order">Orders</string>
    <string name="admin_offer">Offers</string>
    <string name="admin_add_product">Add Product</string>
    <string name="admin_add_offer">Add Offer</string>
    <string name="email_address">Email Address</string>
    <string name="customer_name">Customer Name</string>

    <string name="confirm_det">Confirm Details</string>

    <!--Logo-->
    <string name="companyName">Food Hut</string>

    <!--Sign Up-->
    <string name="emailAdd">Email Address</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="cpwd">Confirm Password</string>
    <string name="regBtn">Register Now</string>
    <string name="member">Already A Member</string>

    <!--Login-->
    <string name="loginBtn">Login</string>
    <string name="logMem">Still Not A Member?</string>

    <!--Add New Product-->
    <string name="addProductTitle">Add New Product</string>
    <string name="editProductTitle">Edit Product</string>
    <string name="productName">Food Name</string>
    <string name="productPrice">Price</string>
    <string name="productCategory">Category</string>
    <string name="productPortion">Portion</string>
    <string name="productPhoto">Choose</string>
    <string name="productAdd">Add</string>
    <string name="productEdit">Update</string>

    <!--Add New Offer-->
    <string name="addOfferTitle">Add New Offer</string>
    <string name="offerName">Offer Name</string>
    <string name="offerDescription">Description</string>
    <string name="offerPrice">Total Price</string>

    <!--User Profile-->
    <string name="cusTitle">Customer Name</string>
    <string name="cusEmail">Email Address</string>
    <string name="cusFullName">Full Name</string>
    <string name="cusTel">Telephone</string>
    <string name="cusAdd">Address</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Deliver Details Form-->
    <string name="delTitle">Delivery Details</string>
    <string name="delFullName">Full Name</string>
    <string name="delPhnNo">Phone Number</string>
    <string name="delStreet">Street Address</string>
    <string name="delCity">City</string>
    <string name="delBtn">Save</string>

</resources>
