<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/admin_customer"
            android:icon="@drawable/admin_cus"
            android:title="@string/admin_customer" />
        <item
            android:id="@+id/admin_product"
            android:icon="@drawable/admin_product"
            android:title="@string/admin_product" />
        <item
            android:id="@+id/admin_order"
            android:icon="@drawable/ic_icon"
            android:title="@string/admin_order" />
        <item
            android:id="@+id/admin_offer"
            android:icon="@drawable/ic_offers"
            android:title="@string/admin_offer" />
    </group>

    <item android:title="Externals">
        <menu>
            <item
                android:id="@+id/admin_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
